k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ignition
  labels:
    name: ignition
    app.kubernetes.io/name: ignition
    app.kubernetes.io/component: namespace
